Fully working example. Updated notebook 1.

--- a/tutorials/1_basic_config_dummy_1w_noact.ipynb
+++ b/tutorials/1_basic_config_dummy_1w_noact.ipynb
@@ -18,25 +18,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] - hls4ml path imported from local dir /mnt/raid5/asic/projects/NU/ENABOL/manuelbv/tutorials/../hls4ml\n"
+      "[INFO] - hls4ml path imported from local dir /mnt/raid5/asic/projects/NU/ENABOL/manuelbv/hls4ml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-20 13:29:23.859016: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-06-20 13:29:23.860868: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-06-20 13:29:23.864916: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-06-20 13:29:23.876160: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-06-20 16:35:58.288332: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-06-20 16:35:58.290143: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-20 16:35:58.293690: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-20 16:35:58.303744: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1750444163.894918 2980526 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1750444163.900505 2980526 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1750444163.915619 2980526 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1750444163.915638 2980526 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1750444163.915640 2980526 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1750444163.915642 2980526 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-06-20 13:29:23.921144: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1750455358.322275 3056252 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1750455358.327701 3056252 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1750455358.341772 3056252 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1750455358.341790 3056252 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1750455358.341792 3056252 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1750455358.341794 3056252 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-06-20 16:35:58.346381: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -44,16 +44,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] - hls4ml version: 0.6.0\n"
+      "[INFO] - hls4ml version: 0.6.0\n",
+      "[INFO] - Configuration loaded from /mnt/raid5/asic/projects/NU/ENABOL/manuelbv/enabol/config/config.yaml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/raid5/asic/projects/NU/ENABOL/manuelbv/tutorials/../hls4ml/converters/__init__.py:16: UserWarning: WARNING: Pytorch converter is not enabled!\n",
+      "/mnt/raid5/asic/projects/NU/ENABOL/manuelbv/hls4ml/converters/__init__.py:16: UserWarning: WARNING: Pytorch converter is not enabled!\n",
       "  warnings.warn(\"WARNING: Pytorch converter is not enabled!\")\n",
-      "/mnt/raid5/asic/projects/NU/ENABOL/manuelbv/tutorials/../hls4ml/converters/__init__.py:23: UserWarning: WARNING: ONNX converter is not enabled!\n",
+      "/mnt/raid5/asic/projects/NU/ENABOL/manuelbv/hls4ml/converters/__init__.py:23: UserWarning: WARNING: ONNX converter is not enabled!\n",
       "  warnings.warn(\"WARNING: ONNX converter is not enabled!\")\n"
      ]
     }
@@ -118,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-20 13:29:26.121775: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "2025-06-20 16:36:00.579070: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     },
     {
@@ -211,21 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "84f7ce32",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[INFO] - /usr/bin already in PATH environment variable\n",
+      "[INFO] - Added /usr/lib/x86_64-linux-gnu:/usr/lib32: to LD_LIBRARY_PATH environment variable\n",
+      "[INFO] - Set LIBRARY_PATH to /usr/lib/x86_64-linux-gnu:/usr/lib32:\n",
+      "[INFO] - Set CC to /usr/bin/gcc-4.9\n",
+      "[INFO] - Set CXX to /usr/bin/g++-4.9\n",
+      "[INFO] - Set CPLUS_INCLUDE_PATH to /usr/include:/usr/include/c++/4.9:/usr/include/x86_64-linux-gnu\n",
       "Interpreting Model\n",
       "Topology:\n",
       "Layer name: input_layer, layer type: Input\n",
@@ -290,29 +290,21 @@
       "Creating HLS model\n",
       "Writing HLS project\n",
       "config2\n",
-      "{'WnB': ['w2', 'b2']}\n",
-      "Done\n",
-      "[ERROR] - Failed to compile HLS model: firmware/myproject-050201D2.so: cannot open shared object file: No such file or directory\n"
+      "{'WnB': ['w2', 'b2']}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "In file included from firmware/myproject.cpp:21:\n",
-      "firmware/myproject.h:23:10: fatal error: gmp.h: No such file or directory\n",
-      "   23 | #include \"gmp.h\"\n",
-      "      |          ^~~~~~~\n",
-      "compilation terminated.\n",
-      "In file included from myproject_bridge.cpp:4:\n",
-      "firmware/myproject.h:23:10: fatal error: gmp.h: No such file or directory\n",
-      "   23 | #include \"gmp.h\"\n",
-      "      |          ^~~~~~~\n",
-      "compilation terminated.\n",
-      "g++: error: myproject.o: No such file or directory\n",
-      "g++: error: myproject_bridge.o: No such file or directory\n",
-      "g++: fatal error: no input files\n",
-      "compilation terminated.\n"
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
      ]
     }
    ],
@@ -348,6 +340,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83971e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo $CPLUS_INCLUDE_PATH\n",
+    "!gcc -xc++ -E -v - </dev/null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b3a3f35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "!which gcc\n",
+    "!gcc --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9ee3f1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /usr/bin/gcc*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "825d3c4d",
    "metadata": {},
    "outputs": [],
    "source": []
